src/assets/css/EvaluationPage.module.scss
@use 'mixins' as *;

/* global card entry animations: firing when the element with the id
   enters the DOM. kept outside of any class so it works regardless of where
   the card is mounted. */
// :global(#step-three-module),
// :global([id="step-three-module"]) {
//   @starting-style {
//     opacity: 0;
//     transform: translateX(var(--incoming-offset));
//   }
// }

:global(#step-three-evaluation) {

  @starting-style {
    opacity: 0;
    transform: translateY(-10rem);
  }
}


/**
 * Styles for the Evaluation Page component.
 */
.evaluation-page {


  &--container {
    --incoming-offset: 20rem;
    --outgoing-offset: -20rem;
    --left-number-offset: -3rem;
    --gap-spacing: calc(var(--spacing) * 6);

    min-height: 100%;
    max-height: calc(100vh - var(--content-offset, 134px));

  }

  [data-slide-direction="left"] &--container {
    --incoming-offset: -20rem;
    --outgoing-offset: 20rem;
    --left-number-offset: 10rem;
  }

  [data-left-content="true"] &--container {
    --incoming-offset: -20rem;
    --outgoing-offset: 20rem;
  }

  &--content {

    &--container {
      display: grid;
      grid-template-columns: 0.05fr 1fr minmax(3rem, 0.05fr);
      justify-self: center;

      width: 97%;
      height: 100%;
      box-shadow: none;
      border: none;
      padding: 0px;
      // padding-bottom: 0px;
      background: none;

      @include for-size(desktop) {
        gap: 0;
      }

      .content {
        overflow-x: hidden;
        overflow-y: auto;
        position: relative;
        display: grid;
        grid-template-columns: 1.5fr 0fr 3fr;
        gap: var(--gap-spacing);
        width: 100%;
        align-items: center;
        padding: 0;

        @media screen and (max-width: 768px) {
          grid-template-columns: 1fr;
          grid-template-rows: 1fr 0fr 1fr;
        }

        &__left-side {
          position: sticky;
          top: 15%;
          bottom: 0;
          display: grid;
          align-items: center;
          place-self: center;
          gap: var(--gap-spacing);
          width: calc(100% - 20%);

          & [data-state="expanded"],
          & [data-state="collapsed"] {
            overflow: hidden;
          }

          &--number {
            grid-row: 1;
            font-size: calc(var(--text-xl) * 3);
            font-weight: bold;
            transition: opacity var(--hover-opacity-transition), var(--transform-transition);

            @starting-style {
              opacity: 0;
              transform: translateX(-1rem);
            }
          }

          &--title {

            grid-row: 2;
            transition: var(--transform-transition);
            margin-bottom: var(--gap-spacing);
            font-weight: bold;

            @starting-style {
              transform: translateX(-2rem);
            }
          }

          &--description {
            grid-row: 3;
            grid-column: 1;
            transition: opacity var(--hover-opacity-transition) 100ms, var(--transform-transition);
            font-size: var(--text-md);
            opacity: 0;
            // transform: translateX(-2rem);

            &[data-state="visible"] {
              opacity: 1;
              transition-delay: 300ms;
              // transform: translateX(0);
            }
          }

          /* container for the children (subskills) only */
          &-content {
            grid-row: 3;
            grid-column: 1;
            max-block-size: 0;
            transition: max-block-size 500ms ease, opacity 200ms ease;

            &[data-state="expanded"] {
              transition: max-block-size 1300ms ease;
              max-block-size: 500px;
            }

          }

          @starting-style {
            opacity: 0;
            transform: translateY(20px);
          }
        }

        &__separator {
          position: sticky;
          top: 0;
          bottom: 0;
          height: 35vh;
          width: 1px;
          margin: auto;

          @include for-size(smalltablet) {
            height: 1px;
            width: 50%;
          }
        }

        &__right-side,
        .arrow-back {
          transition: opacity 1s ease, var(--transform-transition);
          // position: sticky;
          // top: 0;
          grid-column: 3;
          grid-row: 1;
          place-self: center;
          min-width: 40%;

          &.arrow-back {
            min-width: unset;
            justify-self: left;
          }

          &--container {
            display: grid;
            place-self: center;
            gap: calc(var(--spacing) * 3);
            width: 100%;

            & .right__content {
              display: grid;
              gap: calc(var(--spacing) * 6);
            }
          }

          /* Normal slide (step‑2 → step‑3) */
          [data-state="active"] & {
            @starting-style {
              opacity: 0;
              transform: translateX(var(--incoming-offset));
            }
          }

        }
      }

      .footer {
        padding: 0;
        justify-self: center;
      }
    }
  }
}

